corrected mobile nav spacing

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,7 +2,7 @@
  * Site header
  */
 .site-header {
-  min-height: $spacing-unit * 1.865;
+  // min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
   position: sticky;
@@ -24,7 +24,7 @@
   @include relative-font-size(2);
   color: $text-color;
   font-weight: 400;
-  line-height: $base-line-height * $base-font-size * 2.25;
+  // line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: 2px;
   padding: 0% 1%;
   margin-bottom: 0;
@@ -53,7 +53,7 @@
 
 .site-nav {
   @include relative-font-size(1.625);
-  line-height: $base-line-height * $base-font-size * 2.25;
+  // line-height: $base-line-height * $base-font-size * 2.25;
   .menu-icon {
     display: none;
   }
@@ -61,6 +61,7 @@
   .page-link {
     color: $text-color;
     display: inline-block;
+    line-height: $base-line-height * $base-font-size ;
     height: 100%;
     padding: 0% 2%;
     margin-bottom: 0;
@@ -119,10 +120,9 @@
     //   display: block;
     //   padding-bottom: 5px;
     // }
-
     .page-link {
       font-size: 0;
-      line-height: $base-line-height * $base-font-size * 2.25;
+      // line-height: $base-line-height * $base-font-size * 2.25;
       padding: 5px 10px;
 
       &:hover {
